fixed/made resposnive on resizing by adding overflow

--- a/codeplayer/index.css
+++ b/codeplayer/index.css
@@ -1,21 +1,23 @@
 *{margin: 0;  padding: 0;}
 
 /* CSS  FOR BLURR BACKGROUND*/
+
+html{
+    min-height: 100vh;
+    overflow: hidden;
+}
+
 body{
-    background-image: url('Images/background.gif');
+   background-image: url('Images/background.gif');
     background-size: cover;
-    backdrop-filter: blur(40px);
-    height: 100vh;
-    align-items: center;
-    
+    backdrop-filter: blur(4vh);
+    min-height: 100vh;
+    //background-repeat: no-repeat;
+    overflow: hidden;
 }
 
 .div1{
-    //padding: 100%;
-    
-    
-    
-    
+    padding: 50vh 50vw;
     
 }
 
@@ -24,14 +26,14 @@ body{
   all: unset;
   width: 15vh;
   height: 5vh;
-  font-size: 16px;
+  font-size: 2.2vh;
   background: transparent;
   border: none;
   position: relative;
   color: #f0f0f0;
   cursor: pointer;
   z-index: 1;
-  padding: 10px 20px;
+  padding: 1vh 2vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -56,17 +58,17 @@ body{
   width: 100%;
   height: 100%;
   background: #28282d;
-  border-radius: 10px;
+  border-radius: 1.5vh;
 }
 
 .button-86::after {
-  transform: translate(10px, 10px);
-  width: 35px;
-  height: 35px;
+  transform: translate(1vh, 1vh);
+  width: 4.5vh;
+  height: 4.5vh;
   background: #ffffff15;
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border-radius: 50px;
+  backdrop-filter: blur(9.5vh);
+  -webkit-backdrop-filter: blur(9.5vh);
+  border-radius: 5vh;
 }
 
 .button-86:hover::before {
@@ -76,7 +78,7 @@ body{
 }
 
 .button-86:hover::after {
-  border-radius: 10px;
+  border-radius: 1vh;
   transform: translate(0, 0);
   width: 100%;
   height: 100%;
